# kode

./: .clang-format  .travis.yml  CMakeLists.txt  Dockerfile.clang10  Dockerfile.gcc10
cmake/: Dependencies.cmake  ProjectWarnings.cmake  SFML.cmake
src/: CMakeLists.txt  gui.hpp  main.cpp
src/editor/: editor.hpp
test/: CMakeLists.txt
